# rodney

./: .clang-format  README.md
.devcontainer/: devcontainer.json  install-dependencies.sh
source/: CMakeLists.txt
source/app/src/: main.cpp
source/cmake/Toolchains/: AvrToolchain.cmake
